{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 206,
  "lineage": "ce21f9aa-e276-9291-b8d6-ffa8d97c54ec",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/networkInterfaces/mtc-nic",
            "internal_domain_name_suffix": "d43bxvttesdupp1qc3bmwbsipb.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
                "subnet_id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-22-48-7B-DD-DD",
            "name": "mtc-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtc-resources",
            "virtual_machine_id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Compute/virtualMachines/mtc-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "mtc-nic",
            "resource_group_name": "mtc-resources",
            "subscription_id": "984fba01-ff04-4ed7-a603-7885d537400f"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "location": "westus2",
            "name": "mtc-sg",
            "resource_group_name": "mtc-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rules",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "mtc-sg",
            "resource_group_name": "mtc-resources",
            "subscription_id": "984fba01-ff04-4ed7-a603-7885d537400f"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rules",
            "name": "mtc-dev-rules",
            "network_security_group_name": "mtc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "mtc-dev-rules",
            "network_security_group_name": "mtc-sg",
            "resource_group_name": "mtc-resources",
            "subscription_id": "984fba01-ff04-4ed7-a603-7885d537400f"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.98.83.26",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "mtc-ip",
            "resource_group_name": "mtc-resources",
            "subscription_id": "984fba01-ff04-4ed7-a603-7885d537400f"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "name": "mtc-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mtc-resources",
            "virtual_network_name": "mtc-network"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "mtc-subnet",
            "resource_group_name": "mtc-resources",
            "subscription_id": "984fba01-ff04-4ed7-a603-7885d537400f",
            "virtual_network_name": "mtc-network"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "network_security_group_id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "subnet_id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d61bba1f-2473-4787-bf70-1742cb064879",
            "id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network",
            "location": "westus2",
            "name": "mtc-network",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "mtc-resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.123.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
                "name": "mtc-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/984fba01-ff04-4ed7-a603-7885d537400f/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "mtc-network",
            "resource_group_name": "mtc-resources",
            "subscription_id": "984fba01-ff04-4ed7-a603-7885d537400f"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "1584",
                "uid": "5f926697-8a9f-4d90-9642-698f0a1e6f12"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argocd"
          },
          "dependencies": [
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "1581",
                "uid": "92d85b15-5b92-4721-bf39-52c28dd18d17"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "ingress-nginx"
          },
          "dependencies": [
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}